// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonLink > matches the snapshot 1`] = `
"<button class="buttonLink" type="button">
  <!--v-if--><span class="text visuallyHidden">Text</span>
</button>"
`;

exports[`ButtonLink > when disabled prop is set as true > matches the snapshot 1`] = `
"<button class="buttonLink disabled" disabled="" type="button">
  <!--v-if--><span class="text visuallyHidden">Text</span>
</button>"
`;

exports[`ButtonLink > when fullWidth prop is set to true > matches the snapshot 1`] = `
"<button class="buttonLink fullWidth" type="button">
  <!--v-if--><span class="text visuallyHidden">Text</span>
</button>"
`;

exports[`ButtonLink > when icon prop is set > matches the snapshot 1`] = `
"<button class="buttonLink" type="button">
  <phsun class="icon" aria-hidden="true" size="24" weight="duotone"></phsun><span class="text visuallyHidden">Text</span>
</button>"
`;

exports[`ButtonLink > when icon prop is set > when iconPosition prop is set to right > matches the snapshot 1`] = `
"<button class="buttonLink alignRight" type="button">
  <phsun class="icon" aria-hidden="true" size="24" weight="duotone"></phsun><span class="text visuallyHidden">Text</span>
</button>"
`;

exports[`ButtonLink > when is prop is a > matches the snapshot 1`] = `
"<a class="buttonLink">
  <!--v-if--><span class="text visuallyHidden">Text</span>
</a>"
`;

exports[`ButtonLink > when is prop is div > matches the snapshot 1`] = `
"<div class="buttonLink">
  <!--v-if--><span class="text visuallyHidden">Text</span>
</div>"
`;

exports[`ButtonLink > when is prop is nuxt-link > matches the snapshot 1`] = `
"<a class="buttonLink">
  <!--v-if--><span class="text visuallyHidden">Text</span>
</a>"
`;

exports[`ButtonLink > when is prop is undefined > matches the snapshot 1`] = `
"<button class="buttonLink" type="button">
  <!--v-if--><span class="text visuallyHidden">Text</span>
</button>"
`;

exports[`ButtonLink > when showText prop is set to true > matches the snapshot 1`] = `
"<button class="buttonLink" type="button">
  <!--v-if--><span class="text">Text</span>
</button>"
`;
